Tweeked assembler ouput for linker. Started on linker design

--- a/SS_Emulator/SS_Emulator.vcxproj
+++ b/SS_Emulator/SS_Emulator.vcxproj
@@ -119,15 +119,24 @@
     <ClInclude Include="Directive.h" />
     <ClInclude Include="Instruction.h" />
     <ClInclude Include="Lexer.h" />
+    <ClInclude Include="Linker.h" />
     <ClInclude Include="ParsedLine.h" />
     <ClInclude Include="Parser.h" />
     <ClInclude Include="AssemblerException.h" />
+    <ClInclude Include="RelocationEntry.h" />
+    <ClInclude Include="Section.h" />
     <ClInclude Include="Symbol.h" />
     <ClInclude Include="Util.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Assembler.cpp" />
+    <ClCompile Include="Directive.cpp" />
+    <ClCompile Include="Instruction.cpp" />
     <ClCompile Include="Lexer.cpp" />
+    <ClCompile Include="ParsedLine.cpp" />
+    <ClCompile Include="RelocationEntry.cpp" />
+    <ClCompile Include="Section.cpp" />
+    <ClCompile Include="Symbol.cpp" />
     <ClCompile Include="Test.cpp" />
     <ClCompile Include="Parser.cpp" />
     <ClCompile Include="Util.cpp" />
