--- a/SS_Emulator/SS_Emulator.vcxproj.filters
+++ b/SS_Emulator/SS_Emulator.vcxproj.filters
@@ -81,7 +81,7 @@
     <ClCompile Include="Util.cpp">
       <Filter>Source Files\common</Filter>
     </ClCompile>
-    <ClCompile Include="Test.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files\common</Filter>
     </ClCompile>
   </ItemGroup>
